--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   <!-- styles -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Leaflet CSS & JS -->
+  <!-- Leaflet & MarkerCluster -->
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
   />
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-  <!-- MarkerCluster plugin -->
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
@@ -24,8 +22,9 @@
     rel="stylesheet"
     href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
   />
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
@@ -35,13 +34,19 @@
   <header class="site-header">
     <h1 class="site-title">Vision Journal</h1>
     <button id="profile-button" class="header-profile-btn hidden">
-      <img id="profile-pic" src="default-avatar.png" alt="Profile" class="header-avatar" />
+      <!-- 1×1 transparent GIF by default -->
+      <img
+        id="profile-pic"
+        src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+        alt="Avatar"
+        class="header-avatar"
+      />
       <span id="profile-name" class="header-username"></span>
     </button>
   </header>
 
   <div class="layout">
-    <!-- LOGIN SCREEN -->
+    <!-- LOGIN -->
     <main id="login-screen" class="card">
       <h2>Sign Up or Log In</h2>
       <input type="email" id="email" placeholder="you@example.com" />
@@ -51,7 +56,7 @@
       <p id="login-msg"></p>
     </main>
 
-    <!-- PROFILE EDIT SCREEN -->
+    <!-- PROFILE EDIT -->
     <main id="profile-screen" class="card hidden">
       <h2>Your Profile</h2>
       <label>Display Name<br />
@@ -67,7 +72,7 @@
       <p id="profile-msg"></p>
     </main>
 
-    <!-- JOURNAL SCREEN -->
+    <!-- JOURNAL -->
     <main id="journal-screen" class="hidden">
       <div id="insights-box" class="card">
         <h2>Insights</h2>
@@ -103,14 +108,12 @@
         <textarea id="text" placeholder="Describe…"></textarea>
         <input id="tags" placeholder="tags, comma-separated" />
         <label><input type="checkbox" id="isPublic" /> Make Public</label>
-
         <button id="detect-location">Detect My Country/State</button>
         <p id="location-display">(no location yet)</p>
         <div id="manual-location" class="hidden">
           <input type="text" id="country-input" placeholder="Country (required)" />
           <input type="text" id="state-input" placeholder="State/Region (required)" />
         </div>
-
         <button id="save-entry">Save</button>
         <p id="entry-msg"></p>
       </div>
@@ -124,7 +127,12 @@
     <!-- SIDEBAR -->
     <aside id="feed-screen">
       <div id="sidebar-profile" class="card sidebar-profile hidden">
-        <img id="sb-pic" src="default-avatar.png" alt="Profile" class="sidebar-avatar" />
+        <img
+          id="sb-pic"
+          src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+          alt="Avatar"
+          class="sidebar-avatar"
+        />
         <div id="sb-name" class="sidebar-username"></div>
       </div>
       <div id="logout-box" class="card hidden">
@@ -138,7 +146,7 @@
   </div>
 
   <script>
-    // ── Firebase Init ─────────────────────────
+    // ── Firebase Init ───────────────────────────────────────────
     const firebaseConfig = {
       apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
       authDomain: "vision-journal-proto.firebaseapp.com",
@@ -150,7 +158,7 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth(), db = firebase.firestore();
 
-    // ── UI Refs ───────────────────────────────
+    // ── UI Refs ─────────────────────────────────────────────────
     const loginScreen   = document.getElementById('login-screen');
     const journalScreen = document.getElementById('journal-screen');
     const profileScreen = document.getElementById('profile-screen');
@@ -182,19 +190,19 @@
     const filterType    = document.getElementById('filter-type');
     const filterTime    = document.getElementById('filter-time');
 
-    // ── Leaflet Map + Clustering ─────────────────────
+    // ── Leaflet + Clustering ───────────────────────────────────
     let map, markers, leafletReady = false;
     try {
       map = L.map('map').setView([20,0],2);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-        attribution:'© OpenStreetMap'
+        attribution:'© OSM'
       }).addTo(map);
       markers = L.markerClusterGroup();
       map.addLayer(markers);
       leafletReady = true;
-    } catch(e){ console.warn('Leaflet init failed:', e) }
+    } catch(e){ console.warn('Map init failed:',e) }
 
-    // ── Auth Handlers ───────────────────────────────
+    // ── Auth ────────────────────────────────────────────────────
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value,passwordInput.value)
         .catch(e=>loginMsg.textContent=e.message);
@@ -224,7 +232,7 @@
       refreshPublic();
     });
 
-    // ── Profile UI ────────────────────────────────
+    // ── Profile UI ─────────────────────────────────────────────
     profileBtn.onclick = ()=>{
       profileScreen.classList.remove('hidden');
       journalScreen.classList.add('hidden');
@@ -235,117 +243,114 @@
         displayName: nameInput.value,
         hobbies: hobbiesInput.value.split(',').map(s=>s.trim())
       };
-      await db.collection('users').doc(user.uid).set(data,{ merge:true });
+      await db.collection('users').doc(user.uid).set(data,{merge:true});
       loadProfile();
       profileScreen.classList.add('hidden');
       journalScreen.classList.remove('hidden');
     };
     async function loadProfile(){
-      const user = auth.currentUser;
-      const doc = await db.collection('users').doc(user.uid).get();
-      const d = doc.data()||{};
-      const display = d.displayName||user.email;
-      profNameHeader.textContent = display;
-      sbName.textContent = display;
-      nameInput.value = d.displayName||'';
-      hobbiesInput.value = (d.hobbies||[]).join(', ');
+      const user=auth.currentUser;
+      const doc=await db.collection('users').doc(user.uid).get();
+      const d=doc.data()||{};
+      const display=d.displayName||user.email;
+      profNameHeader.textContent=display;
+      sbName.textContent=display;
+      nameInput.value=d.displayName||'';
+      hobbiesInput.value=(d.hobbies||[]).join(', ');
+      // TODO: load picture if you store its URL in d.photoURL
     }
 
-    // ── Location Detection ───────────────────────
+    // ── Location Detection ─────────────────────────────────────
     detectBtn.onclick = () => {
-      locationDisp.textContent = 'Detecting…';
+      locationDisp.textContent='Detecting…';
       fetch('https://ipapi.co/json/')
         .then(r=>r.json())
-        .then(d => {
-          if (d.country_name && d.region) {
-            locationDisp.textContent = `${d.region}, ${d.country_name}`;
-            countryInput.value = d.country_name;
-            stateInput.value   = d.region;
+        .then(d=>{
+          if(d.country_name&&d.region){
+            locationDisp.textContent=`${d.region}, ${d.country_name}`;
+            countryInput.value=d.country_name;
+            stateInput.value=d.region;
             manualDiv.classList.add('hidden');
           } else throw '';
         })
-        .catch(_ => {
-          locationDisp.textContent = 'Auto-detect failed; enter manually';
+        .catch(_=>{
+          locationDisp.textContent='Auto-detect failed; enter manually';
           manualDiv.classList.remove('hidden');
         });
     };
 
-    // ── Save Entry ───────────────────────────────
-    saveBtn.onclick = async () => {
-      const type     = document.getElementById('type').value;
-      const text     = document.getElementById('text').value;
-      const tags     = document.getElementById('tags').value
-                        .split(',').map(s=>s.trim()).filter(Boolean);
-      const isPublic = document.getElementById('isPublic').checked;
-      const country  = countryInput.value.trim();
-      const state    = stateInput.value.trim();
-      if (!country||!state) {
+    // ── Save Entry ─────────────────────────────────────────────
+    saveBtn.onclick = async ()=>{
+      const type=document.getElementById('type').value;
+      const text=document.getElementById('text').value;
+      const tags=document.getElementById('tags').value
+                      .split(',').map(s=>s.trim()).filter(Boolean);
+      const isPublic=document.getElementById('isPublic').checked;
+      const country=countryInput.value.trim();
+      const state=stateInput.value.trim();
+      if(!country||!state){
         alert('Please detect or enter country & state.');
         return;
       }
-      let payload = {
-        userId: auth.currentUser.uid,
-        type, text, tags, isPublic,
-        location:{country, state},
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      let payload={
+        userId:auth.currentUser.uid,
+        type,text,tags,isPublic,
+        location:{country,state},
+        createdAt:firebase.firestore.FieldValue.serverTimestamp()
       };
       try {
         await db.collection('visions')
           .doc(auth.currentUser.uid)
           .collection('entries')
           .add(payload);
-        if (isPublic) {
-          const q = encodeURIComponent(`${state}, ${country}`);
-          const res = await fetch(
+        if(isPublic){
+          const q=encodeURIComponent(`${state}, ${country}`);
+          const res=await fetch(
             `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
           ).then(r=>r.json());
-          if (res[0]) {
-            payload.lat = parseFloat(res[0].lat);
-            payload.lon = parseFloat(res[0].lon);
+          if(res[0]){
+            payload.lat=parseFloat(res[0].lat);
+            payload.lon=parseFloat(res[0].lon);
           }
           await db.collection('publicEntries').add(payload);
         }
-        document.getElementById('entry-msg').textContent = 'Saved!';
+        document.getElementById('entry-msg').textContent='Saved!';
         loadJournal(); refreshPublic();
-      } catch(e) {
+      }catch(e){
         console.error(e);
-        document.getElementById('entry-msg').textContent = 'Save failed.';
+        document.getElementById('entry-msg').textContent='Save failed.';
       }
     };
 
-    // ── Load Journal ─────────────────────────────
+    // ── Load Journal ───────────────────────────────────────────
     function loadJournal(){
-      entriesList.innerHTML = '';
+      entriesList.innerHTML='';
       db.collection('visions')
         .doc(auth.currentUser.uid)
         .collection('entries')
         .orderBy('createdAt','desc')
         .get()
-        .then(snap => {
-          snap.forEach(doc=>{
-            const d=doc.data();
-            const li=document.createElement('li');
-            li.textContent=`${d.type}: ${d.text}`;
-            entriesList.append(li);
-          });
-        })
-        .catch(console.error);
+        .then(snap=>snap.forEach(doc=>{
+          const d=doc.data();
+          const li=document.createElement('li');
+          li.textContent=`${d.type}: ${d.text}`;
+          entriesList.append(li);
+        })).catch(console.error);
     }
 
-    // ── Public Feed & Map ───────────────────────
+    // ── Public Feed & Map ─────────────────────────────────────
     function refreshPublic(){
       loadPublicFeed();
       if(leafletReady) plotPublicMarkers();
     }
     function loadPublicFeed(){
       feedEntries.innerHTML='';
-      let ref = db.collection('publicEntries').orderBy('createdAt','desc');
+      let ref=db.collection('publicEntries').orderBy('createdAt','desc');
       if(!auth.currentUser) ref=ref.limit(10);
       ref.get()
          .then(snap=>{
            if(snap.empty){
-             feedEntries.innerHTML='<p>No public entries.</p>';
-             return;
+             feedEntries.innerHTML='<p>No public entries.</p>'; return;
            }
            snap.forEach(doc=>{
              const d=doc.data();
@@ -364,7 +369,7 @@
     async function plotPublicMarkers(){
       if(!leafletReady) return;
       markers.clearLayers();
-      const snap = await db.collection('publicEntries').get();
+      const snap=await db.collection('publicEntries').get();
       for(let docSnap of snap.docs){
         const d=docSnap.data();
         let {lat,lon}=d;
